<resources>
    <string name="app_name">03cemera_preview</string>
    <string name="btn1_string">摄像头界面</string>
    <string name="btn_back">返回</string>
    <string name="digital_title">第几行数据:</string>
    <string name="QrCode_Name">QrCode_Name</string>
    <string name="Licence_Name">Licence_Name</string>
    <string name="Traffic_Name">Traffic_Name</string>
    <string name="Picture_Name">Picture_Name</string>
    <string name="voicetext">播报的文本:</string>

    <string name="sp_data">80</string>
    <string name="cd_data">20</string>
    <string name="angle_data">450</string>
    <string name="speed">速度:</string>
    <string name="coded_disc">码盘:</string>
    <string name="angle_disc">角度:</string>
    <string name="brn_wire_connect">有线连接</string>
    <string name="brn_wireless_connect">无线连接</string>
    <string name="input_img">input_img</string>
    <string name="Processed_img">Processed_img</string>
    <string name="Auto">识别</string>
    <string name="Manual">手动</string>

</resources>
