<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qtp000.a03cemera_preview.MainActivity_two">

    <EditText
        android:id="@+id/input_5"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input_4"
        app:layout_constraintTop_toTopOf="@+id/input_4" />

    <EditText
        android:id="@+id/input_6"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input_5"
        app:layout_constraintTop_toTopOf="@+id/input_5" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="124dp"
        android:layout_height="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="328dp"
        android:text="@string/btn1_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview" />

    <ImageView
        android:id="@+id/cemera_preview"
        android:layout_width="0dp"
        android:layout_height="338dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/btn_up"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview"
        app:srcCompat="@drawable/up" />

    <ImageButton
        android:id="@+id/btn_down"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/btn_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_up"
        app:srcCompat="@drawable/down" />

    <ImageButton
        android:id="@+id/btn_left"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginTop="196dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_up"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/btn_right"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_marginTop="196dp"
        app:layout_constraintStart_toEndOf="@+id/btn_up"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview"
        app:srcCompat="@drawable/right" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="189dp"
        android:layout_height="69dp"
        android:layout_marginBottom="1dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_function"
        android:layout_width="117dp"
        android:layout_height="65dp"
        android:layout_marginStart="224dp"
        android:text="功能页面"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/btn_moni1"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="模拟一"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview" />

    <Button
        android:id="@+id/btn_toshape"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:text="图形识别"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="135dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="停止线程"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_moni1" />

    <TextView
        android:id="@+id/isrunning"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginEnd="192dp"
        android:text="运行状态"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cemera_preview" />

    <EditText
        android:id="@+id/input_1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <EditText
        android:id="@+id/input_2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input_1"
        app:layout_constraintTop_toTopOf="@+id/input_1" />

    <EditText
        android:id="@+id/input_3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input_2"
        app:layout_constraintTop_toTopOf="@+id/input_2" />

    <EditText
        android:id="@+id/input_4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/input_3"
        app:layout_constraintTop_toTopOf="@+id/input_3" />

    <Switch
        android:id="@+id/switch_shape_auto_manual"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="16dp"
        android:textOff="@string/Auto"
        android:textOn="@string/Manual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_license_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_license_auto_manual" />

    <Switch
        android:id="@+id/switch_license_auto_manual"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Switch"
        android:textOff="MANUAL"
        android:textOn="AUTO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
